# bdrc-data-assessment

./: .gitignore  .test_env  all_works_processed.txt  pyproject.toml
src/data_assessment/: count_trig.py  parser.py
src/relations/: get_relation.py  query.py
tests/: conftest.py  test_example.py  test_parser.py
